# aq-tseries-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  basic_fit.py  fit_with_plotting.py  proces01.py  pyproject.toml  requirements.txt
csv/: .~lock.output.csv#  MzWarAlNiepo.csv  SlCzestoArmK.csv  SlCzestoArmK_NO2.csv  output.csv
utils/: __init__.py  data_loaders.py  modelers.py
