[project]
name = "aq-tseries-prediction"
version = "0.1.0"
requires-python = ">=3.13.7"
dependencies = [
    "annotated-types==0.7.0",
    "cmdstanpy==1.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "holidays==0.84",
    "importlib-resources==6.5.2",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "plotly>=6.4.0",
    "prophet==1.2.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn>=1.7.2",
    "six==1.17.0",
    "stanio==0.5.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uv==0.9.7",
]
